# npyt

./: README.md  pyproject.toml
deprecated/: core.py
examples/: endless.py  read_npy.py  resize.py  ringbuffer_apend.py  ringbuffer_pop.py  share_data.py  structured_type.py
npyt/: __init__.py  core.py  endless.py  format.py
tests/: align_bug.py  append.py  expend.py  head_tail.py  load.py  pop.py  read_npy.py  read_tell.py  resize.py  ringbuffer.py  seek.py  show_data.py  structured_type.py
