[project]
name = "npyt"
description = "NPY file format with Tail"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru",
    "numpy",
    "typing_extensions",
    "more_itertools",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "npyt/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["npyt"]
include-package-data = true

[tool.hatch.build.targets.sdist]
include = ["npyt*"]
